# AlphaForge

./: .env  .env.example  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.trainer  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat
.github/workflows/: cd.yml  ci.yml
airflow/dags/: backtest_dag.py  feature_dag.py  ingest_dag.py  train_dag.py
data/: alphaforge.db-shm  alphaforge.db-wal
lightning_logs/version_0/: metrics.csv
lightning_logs/version_0/checkpoints/: epoch=49-step=32250.ckpt
lightning_logs/version_1/: hparams.yaml  metrics.csv
lightning_logs/version_1/checkpoints/: epoch=49-step=32200.ckpt
lightning_logs/version_10/: metrics.csv
lightning_logs/version_10/checkpoints/: epoch=12-step=8476.ckpt
lightning_logs/version_11/: metrics.csv
lightning_logs/version_11/checkpoints/: epoch=29-step=24540.ckpt
lightning_logs/version_12/: metrics.csv
lightning_logs/version_13/: metrics.csv
lightning_logs/version_14/: metrics.csv
lightning_logs/version_15/: metrics.csv
lightning_logs/version_16/: metrics.csv
lightning_logs/version_17/: metrics.csv
lightning_logs/version_2/: metrics.csv
lightning_logs/version_3/: metrics.csv
lightning_logs/version_4/: metrics.csv
lightning_logs/version_5/: metrics.csv
lightning_logs/version_6/: metrics.csv
lightning_logs/version_7/: metrics.csv
lightning_logs/version_8/: metrics.csv
lightning_logs/version_9/: metrics.csv
mlruns/596183221104701464/: meta.yaml
monitoring/: alerts.yml  grafana_dashboard.json  prometheus.yml
notebooks/: 01_eda.ipynb  02_feature_analysis.ipynb  03_model_analysis.ipynb
scripts/: init_db.py  init_db.sql
src/: __init__.py  config.py  logger.py
src/data/: ingestion.py  storage.py
src/evaluation/: backtest.py  drift.py  metrics.py
src/features/: pipeline.py  technical.py
src/models/: lstm.py  tft.py
src/serving/: api.py  cache.py  schemas.py
src/training/: cv.py  optuna_search.py  trainer.py
tests/: conftest.py  test_all.py
(+138 files in other folders)
