[tool.poetry]
name = "alphaforge"
version = "0.1.0"
description = "Production-grade Algorithmic Trading Signal Engine"
authors = ["AlphaForge Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Data ingestion
yfinance = "^0.2.36"
ccxt = "^4.2.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"

# Data storage & processing
pandas = "^2.1.0"
numpy = "^1.26.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.0"
pyarrow = "^14.0.0"

# Feature engineering
pandas-ta = "^0.3.14b"
scipy = "^1.11.0"

# Feature store
feast = "^0.35.0"

# ML / Deep Learning
torch = "^2.1.0"
lightning = "^2.1.0"
pytorch-forecasting = "^1.0.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
shap = "^0.43.0"
optuna = "^3.4.0"

# MLOps
mlflow = "^2.9.0"
great-expectations = "^0.18.0"
evidently = "^0.4.0"

# Backtesting
backtrader = "^1.9.78"
vectorbt = "^0.26.1"
pyfolio-reloaded = "^0.9.5"

# Serving
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Observability
prometheus-client = "^0.19.0"
structlog = "^23.2.0"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^8.2.0"
click = "^8.1.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.25.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
ipykernel = "^6.27.0"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]
